--- a/snippets/css-typography.liquid
+++ b/snippets/css-typography.liquid
@@ -106,12 +106,12 @@
     --font--button--size: {{ settings.typography--button--size }}px;
     --font--button--spacing: {{ settings.typography--button--spacing }}px;
 
-    --font--heading--family: {{ font--heading.family }}, {{ font--heading.fallback_families }};
+    --font--heading--family: 'FranklinGothicURWConDem', {{ font--heading.family }}, {{ font--heading.fallback_families }};
     --font--heading--weight: {{ font--heading.weight | default: 400 }};
     --font--heading--style: {{ font--heading.style }};
     --font--heading--spacing: {{ settings.typography--heading--spacing }}px;
 
-    --font--nav--family: {{ font--nav.family }}, {{ font--nav.fallback_families }};
+    --font--nav--family: 'FranklinGothicURWConDem', {{ font--nav.family }}, {{ font--nav.fallback_families }};
     --font--nav--weight: {{ font--nav.weight | default: 400 }};
     --font--nav--style: {{ font--nav.style }};
 
