add open by default option to description. add liquid option to collapsible row.

--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -441,6 +441,12 @@
           "id": "overline",
           "type": "text",
           "default": "Overline text"
+        },
+        {
+          "type": "checkbox",
+          "id": "show-above-image",
+          "label": "Show above image",
+          "default": false
         }
       ]
     },
@@ -669,6 +675,12 @@
           "id": "heading",
           "label": "Collapsible row heading",
           "default": "Description"
+        },
+        {
+          "type": "checkbox",
+          "id": "default-open",
+          "label": "Open by default",
+          "default": true
         }
       ]
     },
@@ -743,6 +755,12 @@
           "type": "page",
           "id": "page-content",
           "label": "Tab content from page"
+        },
+        {
+          "type": "liquid",
+          "id": "liquid",
+          "label": "Liquid",
+          "info": "Replaces inline content if specified."
         },
         {
           "type": "checkbox",
@@ -990,6 +1008,12 @@
           "id": "custom-liquid",
           "label": "Custom Liquid",
           "info": "Add app snippets or other Liquid code to create advanced customizations."
+        },
+        {
+          "type": "checkbox",
+          "id": "show-above-image",
+          "label": "Show above image",
+          "default": false
         }
       ]
     },
