grid option - work in progress

--- a/snippets/product--blocks.liquid
+++ b/snippets/product--blocks.liquid
@@ -156,7 +156,8 @@
               id: product_id,
               product: product,
               block_settings: block.settings,
-              main_product: main_product
+              main_product: main_product,
+              grid: true
             -%}
 
             {%- liquid
