--- a/snippets/css-typography.liquid
+++ b/snippets/css-typography.liquid
@@ -106,16 +106,16 @@
     --font--button--size: {{ settings.typography--button--size }}px;
     --font--button--spacing: {{ settings.typography--button--spacing }}px;
 
-    --font--heading--family: 'FranklinGothicURWConDem', {{ font--heading.family }}, {{ font--heading.fallback_families }};
-    --font--heading--weight: {{ font--heading.weight | default: 400 }};
+    --font--heading--family: 'Roboto Condensed', 'Zen Kaku Gothic New', {{ font--heading.fallback_families }};
+    --font--heading--weight: {{ font--heading.weight | default: 700 }};
     --font--heading--style: {{ font--heading.style }};
     --font--heading--spacing: {{ settings.typography--heading--spacing }}px;
 
-    --font--nav--family: 'FranklinGothicURWConDem', {{ font--nav.family }}, {{ font--nav.fallback_families }};
+    --font--nav--family: 'Roboto Condensed', 'Zen Kaku Gothic New', {{ font--nav.fallback_families }};
     --font--nav--weight: {{ font--nav.weight | default: 400 }};
     --font--nav--style: {{ font--nav.style }};
 
-    --font--paragraph--family: {{ font--paragraph.family }}, {{ font--paragraph.fallback_families }};
+    --font--paragraph--family: 'Roboto Condensed', 'Zen Kaku Gothic New', {{ font--paragraph.fallback_families }};
     --font--paragraph--weight: {{ font--paragraph.weight | default: 400 }};
     --font--paragraph--style: {{ font--paragraph.style }};
     --font--paragraph--spacing: {{ settings.typography--paragraph--spacing }}px;
