remove powered by

--- a/sections/password.liquid
+++ b/sections/password.liquid
@@ -111,9 +111,9 @@
 
       {%- endif -%}
 
-      <div class="password--powered-by" data-item="paragraph">
+      {% comment %} <div class="password--powered-by" data-item="paragraph">
         {{- 'layout.password.powered_by_shopify_html' | t: shopify: shopify -}}
-      </div>
+      </div> {% endcomment %}
     </div>
   </div>
 </password-element>
