--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -181,12 +181,12 @@
         </div>
       {%- endif -%}
 
-      {%- assign powered_check = powered_by_link | split: '>' -%}
+      {% comment %} {%- assign powered_check = powered_by_link | split: '>' -%}
       {%- if powered_check[1] != ' </a' -%}
         <div class="footer--sub--block" data-type="powered-by" data-item="nav-text">
           {{- powered_by_link -}}
         </div>
-      {%- endif -%}
+      {%- endif -%} {% endcomment %}
 
       {%- liquid
         if shop.enabled_payment_types != empty and section.settings.show-payment-icons
