--- a/assets/theme-custom.css
+++ b/assets/theme-custom.css
@@ -12,20 +12,18 @@
 .mobile-nav--header svg,
 .mobile-nav--footer svg {
   filter: invert(1);
-}
-
-.mobile-nav--footer {
-  align-items: center;
-}
-.mobile-nav--footer svg {
   height: 2.1rem;
   width: 2.1rem;
+}
+.mobile-nav--footer {
+  align-items: center;
 }
 
 .y-menu--parent-link:first-child>:is(a, button, modal-trigger),
 .y-menu--level-1--link:first-child>:is(a, button, modal-trigger),
 .y-menu--level-2--link:first-child>:is(a, button, modal-trigger),
 .y-menu--level-3--link:first-child>:is(a, button, modal-trigger) {
+  margin-top: 3rem;
   border-top: none;
 }
 .y-menu--parent-link>:is(a, button, modal-trigger),
@@ -33,6 +31,11 @@
 .y-menu--level-2--link>:is(a, button, modal-trigger),
 .y-menu--level-3--link>:is(a, button, modal-trigger) {
   border-bottom: none;
+}
+
+.footer--block .social-icons--items svg {
+  height: 2.1rem;
+  width: 2.1rem;
 }
 
 .product--heading-block {
